# AVR-PCC-Firmware

./: .gitignore  .gitmodules  .pre-commit-config.yaml  README.md  build.py  pyproject.toml  setup.py
.devcontainer/: devcontainer.json
.github/: dependabot.yml
.github/workflows/: build.yml
libraries/: queue-default.patch
libraries/AVR_NeoDriver/: avr_led.cpp  avr_led.hpp
libraries/AVR_SerialParser/: serial_lib.cpp  serial_lib.hpp
libraries/AVR_ServoDriver/: avr_servo.cpp  avr_servo.hpp
src/: main.cpp
