[tool.poetry]
    name        = "bell-avr-pcc-firmware"
    version     = "0.1.0"
    description = "PCC firmware for Bell AVR"
    license     = "MIT"
    readme      = "README.md"
    homepage    = "https://github.com/bellflight/AVR-PCC-Firmware"
    authors     = ["Nathan Vaughn <nvaughn51@gmail.com>"]

[tool.poetry.dependencies]
    python     = ">=3.9,<3.12"
    platformio = "^6.1.6"

[tool.poetry.group.dev.dependencies]
    pre-commit   = "^3.2.2"
    clang-format = "^16.0.2"
